--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
         <footer class="bg-white py-4 mt-auto">
             <div class="container px-5">
                 <div class="row text-center">
-                    <div class="col-12"><div class="small m-0">Copyright &copy; Demison Wonda 2023</div></div>
+                    <div class="col-12"><div class="small m-0">Copyright &copy; Demison W 2023</div></div>
                 
                 </div>
             </div>
