--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                             <!-- Header text content-->
                             <div class="text-center text-xxl-start">
                                 <div class="badge bg-gradient-primary-to-secondary text-white mb-4"><div class="text-uppercase">Web &middot; Development, STUDENT</div></div>
-                                <div class="fs-3 fw-light text-muted">Apakah anda membutuHkan bantuan</div>
+                                <div class="fs-3 fw-light text-muted">Apakah anda membutuhkan bantuan</div>
                                 <h1 class="display-3 fw-bolder mb-5"><span class="text-gradient d-inline">Segera Humbungi Saya</span></h1>
                                 <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xxl-start mb-3">
                                     <a class="btn btn-primary btn-lg px-5 py-3 me-sm-3 fs-6 fw-bolder" href="resume.html">Resume</a>
@@ -198,7 +198,7 @@
         <footer class="bg-white py-4 mt-auto">
             <div class="container px-5">
                 <div class="row text-center">
-                    <div class="col-12"><div class="small m-0">Copyright &copy; Demison W 2023</div></div>
+                    <div class="col-12"><div class="small m-0">Copyright &copy; Demison Wonda 2023</div></div>
                 
                 </div>
             </div>
